--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -22,7 +22,7 @@
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:tabMaxWidth="0dp"
+            app:tabMaxWidth="@dimen/parent_layout_common_margin"
             app:tabGravity="fill"
             app:tabMode="scrollable"/>
 
