--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,7 +3,10 @@
     <dimen name="listViewHeaderPadding">8dp</dimen>
     <dimen name="listViewItemPadding">5dp</dimen>
     <dimen name="commonPadding">10dp</dimen>
-    <dimen name="cardviewProperty">20dp</dimen>
+    <dimen name="cardviewProperty">10dp</dimen>
     <dimen name="parent_layout_common_margin">0dp</dimen>
     <dimen name="activity_margin">4dp</dimen>
+    <dimen name="alert_margin">20dp</dimen>
+    <dimen name="alert_title_font_size">22sp</dimen>
+    <dimen name="alert_primary_text_font_size">15sp</dimen>
 </resources>
