--- a/app/src/vilayaatu/res/layout/fragment_details.xml
+++ b/app/src/vilayaatu/res/layout/fragment_details.xml
@@ -10,7 +10,7 @@
     <LinearLayout
         android:id="@+id/parent_panel1"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="@dimen/parent_layout_common_margin"
         android:layout_weight="2"
         android:background="@android:color/background_dark"
         android:orientation="horizontal"
@@ -19,9 +19,9 @@
         <com.padhuga.tamil.activities.LinearLayoutAbsListView
             android:id="@+id/pane2"
             android:tag="pane2"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/parent_layout_common_margin"
             android:layout_height="match_parent"
-            android:layout_margin="4dp"
+            android:layout_margin="@dimen/activity_margin"
             android:layout_weight="1"
             android:background="@android:color/background_light"
             android:orientation="vertical"
@@ -44,9 +44,9 @@
         <com.padhuga.tamil.activities.LinearLayoutAbsListView
             android:id="@+id/pane3"
             android:tag="pane3"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/parent_layout_common_margin"
             android:layout_height="match_parent"
-            android:layout_margin="4dp"
+            android:layout_margin="@dimen/activity_margin"
             android:layout_weight="1"
             android:background="@android:color/background_light"
             android:orientation="vertical"
@@ -69,9 +69,9 @@
         <com.padhuga.tamil.activities.LinearLayoutAbsListView
             android:id="@+id/pane4"
             android:tag="pane4"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/parent_layout_common_margin"
             android:layout_height="match_parent"
-            android:layout_margin="4dp"
+            android:layout_margin="@dimen/activity_margin"
             android:layout_weight="1"
             android:background="@android:color/background_light"
             android:orientation="vertical"
@@ -90,13 +90,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </com.padhuga.tamil.activities.LinearLayoutAbsListView>
-        
+
         <com.padhuga.tamil.activities.LinearLayoutAbsListView
             android:id="@+id/pane5"
             android:tag="pane5"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/parent_layout_common_margin"
             android:layout_height="match_parent"
-            android:layout_margin="4dp"
+            android:layout_margin="@dimen/activity_margin"
             android:layout_weight="1"
             android:background="@android:color/background_light"
             android:orientation="vertical"
@@ -119,9 +119,9 @@
         <com.padhuga.tamil.activities.LinearLayoutAbsListView
             android:id="@+id/pane6"
             android:tag="pane6"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/parent_layout_common_margin"
             android:layout_height="match_parent"
-            android:layout_margin="4dp"
+            android:layout_margin="@dimen/activity_margin"
             android:layout_weight="1"
             android:background="@android:color/background_light"
             android:orientation="vertical"
@@ -146,7 +146,7 @@
     <LinearLayout
         android:id="@+id/parent_panel2"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="@dimen/parent_layout_common_margin"
         android:layout_weight="1"
         android:background="@android:color/background_dark"
         android:orientation="horizontal"
@@ -157,7 +157,7 @@
             android:tag="pane1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="4dp"
+            android:layout_margin="@dimen/activity_margin"
             android:background="@android:color/background_light"
             android:orientation="vertical"
             android:visibility="gone">
