--- a/app/src/main/res/xml/prefs.xml
+++ b/app/src/main/res/xml/prefs.xml
@@ -5,7 +5,7 @@
 		android:title="Color">
 		<com.flask.colorpicker.ColorPickerPreference
 			android:key="text_color_preference"
-			android:title="Text Color"
+			android:title="@string/text_color"
 			app:alphaSlider="true"
 			app:density="30"
 			app:initialColor="0xfff9f93d"
@@ -13,7 +13,7 @@
 			/>
 		<com.flask.colorpicker.ColorPickerPreference
 			android:key="parent_card_color_preference"
-			android:title="First Screen Color"
+			android:title="@string/first_screen_color"
 			app:alphaSlider="true"
 			app:density="30"
 			app:initialColor="0xff729101"
@@ -21,7 +21,7 @@
 			/>
 		<com.flask.colorpicker.ColorPickerPreference
 			android:key="child_card_color_preference"
-			android:title="Second Screen Color"
+			android:title="@string/second_screen_color"
 			app:alphaSlider="true"
 			app:density="30"
 			app:initialColor="0xffdf9502"
