Logic for showing the writting methods for uyir ezhuthukal and mei ezhuthukal.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -54,6 +54,13 @@
         <item name="android:textColor">@color/colorListViewHeaderText</item>
     </style>
 
+    <style name="WebViewStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">200dp</item>
+        <item name="android:padding">@dimen/commonPadding</item>
+        <item name="android:textColor">@color/colorListViewHeaderText</item>
+    </style>
+
     <style name="ListViewStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
