--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -41,6 +41,11 @@
 
             </com.padhuga.tamil.utils.BaseChildCardView>
 
+            <WebView
+                android:id="@+id/child_writing_form"
+                style="@style/WebViewStyle"
+                android:visibility="gone" />
+
         </LinearLayout>
 
     </ScrollView>
